Fixed a spacing issue with the task 5 form in styles.css

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -294,4 +294,6 @@ Task 2 button styles
 #invalidTask5{
 	color: #ff0000;
 	visibility: hidden;
+	padding: 0px;
+	margin: 0px;
 }
